@@ -4395,8 +4395,10 @@ _write_data_array_to_file(char *file_name, char **data, uint32_t size)
 		return ESLURM_WRITING_TO_FILE;
 	}
 
-	if (data == NULL)
+	if (data == NULL) {
+		close(fd);
 		return SLURM_SUCCESS;
+	}
 
 	for (i = 0; i < size; i++) {
 		nwrite = strlen(data[i]) + 1;
@@ -4540,6 +4542,7 @@ _read_data_array_from_file(char *file_name, char ***data, uint32_t * size,
 	if (rec_cnt == 0) {
 		*data = NULL;
 		*size = 0;
+		close(fd);
 		return;
 	}
 
